--- a/index.html
+++ b/index.html
@@ -185,21 +185,21 @@
                         completed channeling time.</p>
                 </div>
                 <div class="ability-box">
-                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <div style="background-image: url(imgs/sideways.png);" class="ability-bg-image"></div>
                     <h3>Sleep - Sideways!!!</h3>
                     <p><strong>Channeling</strong>: 60 seconds. Potato lies on his side and takes a very relaxing nap.
                         During the nap, potato is completely stunned, but gains 50 hp per second and 50 mp per second
                         recovery and +20 armor. Potato may end his nap at any moment.</p>
                 </div>
                 <div class="ability-box">
-                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <div style="background-image: url(imgs/circle.PNG);" class="ability-bg-image"></div>
                     <h3>Sleep - Circle!!!</h3>
                     <p><strong>Channeling</strong>: 60 seconds. Potato goes into a circle and takes a very safe nap.
                         During the nap, potato is completely stunned, but gains 50% evasion and 90% damage reduction
                         from all sources. Potato may end his nap at any moment.</p>
                 </div>
                 <div class="ability-box">
-                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <div style="background-image: url(imgs/cuddle.PNG);" class="ability-bg-image"></div>
                     <h3>Sleep - Cuddle!!!</h3>
                     <p><strong>Channeling</strong>: 60 seconds. Potato cuddles up to one ally hero and takes a very
                         loving nap. During the nap, Potato and the allied hero are both completely stunned, but both
@@ -207,7 +207,7 @@
                         or the allied hero may end this nap at any moment, waking up both heroes.</p>
                 </div>
                 <div class="ability-box">
-                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <div style="background-image: url(imgs/fetch.PNG);" class="ability-bg-image"></div>
                     <h3>Fetch</h3>
                     <p><strong>Passive Reaction</strong>: When an opponent's projectile attack or ability misses, Potato
                         can fetch and launch it back at the opponent for <span class="green">2x</span> the original
@@ -216,7 +216,7 @@
                         animation-canceled for quick map traversal.</p>
                 </div>
                 <div class="ability-box">
-                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <div style="background-image: url(imgs/mouthing_weak.PNG);" class="ability-bg-image"></div>
                     <h3>Mouthing - Weak</h3>
                     <p><strong>Channeling</strong>: 5 seconds.</p>
                     <p><strong>Opponent</strong>: Movespeed slowed by <span class="red">50%</span>, cannot attack. Can
@@ -227,7 +227,7 @@
                     </p>
                 </div>
                 <div class="ability-box">
-                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <div style="background-image: url(imgs/mouthing_strong.PNG);" class="ability-bg-image"></div>
                     <h3>Mouthing - Strong</h3>
                     <p><strong>Channeling</strong>: 5 seconds.</p>
                     <p><strong>Opponent</strong>: Movespeed slowed by <span class="red">30%</span>, takes <span
